--- a/templates/site/index.html
+++ b/templates/site/index.html
@@ -1,114 +1,68 @@
+{% extends "site/base.html" %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>SquamataBase</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-    <style>
-        body {
-            width: 100%;
-            height: 100%;
-        }
 
-        /* Remove the navbar's default margin-bottom and rounded borders */
-        .navbar {
-            margin-bottom: 0;
-            border-radius: 0;
-        }
-        
-        /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-        .row.content {
-            height: 450px;
-        }
-        
-        /* Set gray background color and 100% height */
-        .sidenav {
-            padding-top: 20px;
-            background-color: #f1f1f1;
-            height: 100%;
-        }
-        
-        /* Set black background color, white text and some padding */
-        footer {
-            background-color: #555;
-            color: white;
-            padding: 15px;
-        }
-        
-        /* On small screens, set height to 'auto' for sidenav and grid */
-        @media screen and (max-width: 767px) {
-            .sidenav {
-                height: auto;
-                padding: 15px;
-            }
-            .row.content {
-                height:auto;
-            }
-        }
-
-        #mapid { 
-            height: 450px;
-            width: 100%;
-        }
-
-    </style>
-</head>
-<body>
-
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">SquamataBase</a>
+{% block sidebar %}
+    <form role="form" method="get">
+        <div class="form-group">
+            <label for="taxon-search-box">Search for records involving . . .</label>
+            <input class="form-control" type="text" id="taxon-search-box" name="taxon" placeholder="Enter taxon name"></input>
         </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="/admin/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Search</button>
+        </div>
+    </form>
+    <br><br>
+    <div class="text-left" id="result-nav-container">
+        {% if foodrecords %}
+            <span class="result-nav-span"><small>{{foodrecords|length}} result{{foodrecords|pluralize}}</small></span>
+        {% else %}
+            <span class="result-nav-span"><small>0 results</small></span>
+        {% endif %}
+        <div id="result-nav-pills">
+            <ul class="nav nav-pills">
+                <li role="presentation" class="nav-item {% if foodrecords %}active{% else %}disabled{% endif %}">
+                    {% if foodrecords %}
+                    <a class="nav-link" data-toggle="pill" href="#map-result" role = "tab" aria-controls="map-result" id="map-tab">Map</a>
+                    {% else %}
+                    <a class="nav-link disabled" role = "tab" aria-controls="map-result" id="map-tab">Map</a>
+                    {% endif %}
+                </li>
+                <li role="presentation" class="nav-item {% if foodrecords %}{% else %}disabled{% endif %}">
+                    {% if foodrecords %}
+                    <a class="nav-link" data-toggle="pill" href="#table-result" role = "tab" aria-controls="table-result" id="table-tab">Table</a>
+                    {% else %}
+                    <a class="nav-link disabled" role = "tab" aria-controls="table-result" id="table-tab">Table</a>
+                    {% endif %}
+                </li>
             </ul>
         </div>
     </div>
-</nav>
-    
-<div class="container-fluid text-center">
-    <div class="row content">
-        <div class="col-sm-3 sidenav">
-            <p><a href="#">Link</a></p>
-            <p><a href="#">Link</a></p>
-            <p><a href="#">Link</a></p>
-        </div>
-        <div class="col-sm-9 text-left">
+{% endblock %}
+
+{% block content %}        
+    <div class="tab-content">
+        <div class="tab-pane active" id="map-result" role="tab-panel">
             <div id="mapid"></div>
         </div>
+        <div class="tab-pane" id="table-result" role="tab-panel">
+            {% if foodrecords %}
+                <table class="table table-striped table-hover">
+                    <tr class = "row2">
+                        <th>Predator</th>
+                        <th>Prey</th>
+                    </tr>
+                    {% for foodrecord in foodrecords %}
+                    <tr>
+                        <td>{{foodrecord.predator.taxon.scientific_name}}</td>
+                        <td>{{foodrecord.prey.taxon.scientific_name}}</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            {% endif %}
+        </div>
     </div>
-</div>
+{% endblock %}
 
-<footer class="container-fluid text-center">
-    <p></p>
-</footer>
-
-<script>
-    var map = L.map('mapid').setView([15, 0], 2);
-    //'https://server.arcgisonline.com/ArcGIS/rest/services/World_Terrain_Base/MapServer'
-    //'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'
-    L.tileLayer('https://{s}.tile.thunderforest.com/landscape/{z}/{x}/{y}.png', {
-        attribution: 'Maps &copy <a href="http://www.thunderforest.com">Thunderforest</a>, Data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-        }).addTo(map);
-</script>
-
-</body>
-</html>
+{% block extrajs %}
+    <script src="/static/site/js/initializeMap.js"></script>
+{% endblock %}
