--- a/templates/site/index.html
+++ b/templates/site/index.html
@@ -1,8 +1,8 @@
 {% extends "site/base.html" %}
-<!DOCTYPE html>
+{% load pagination %}
 
 {% block sidebar %}
-    <form role="form" method="get">
+    <form role="form" method="get" id="search">
         <div class="form-group">
             <label for="taxon-search-box">Search for records involving . . .</label>
             <input class="form-control" type="text" id="taxon-search-box" name="taxon" placeholder="Enter taxon name"></input>
@@ -13,26 +13,23 @@
     </form>
     <br><br>
     <div class="text-left" id="result-nav-container">
-        {% if foodrecords %}
-            <span class="result-nav-span"><small>{{foodrecords|length}} result{{foodrecords|pluralize}}</small></span>
-        {% else %}
-            <span class="result-nav-span"><small>0 results</small></span>
-        {% endif %}
         <div id="result-nav-pills">
             <ul class="nav nav-pills">
-                <li role="presentation" class="nav-item {% if foodrecords %}active{% else %}disabled{% endif %}">
-                    {% if foodrecords %}
-                    <a class="nav-link" data-toggle="pill" href="#map-result" role = "tab" aria-controls="map-result" id="map-tab">Map</a>
-                    {% else %}
-                    <a class="nav-link disabled" role = "tab" aria-controls="map-result" id="map-tab">Map</a>
-                    {% endif %}
+                <li role="presentation" class="nav-item {%if foodrecords%}{%if page%}{%else%}active{%endif%}{%else%}disabled{%endif%}">
+                    <a class="nav-link{%if foodrecords%}{%else%}disabled{%endif%}" {% if foodrecords %} data-toggle="tab" href="#map-result" {% else %}{% endif %} role = "tab" aria-controls="table-result" id="table-tab">Map</a>
                 </li>
-                <li role="presentation" class="nav-item {% if foodrecords %}{% else %}disabled{% endif %}">
-                    {% if foodrecords %}
-                    <a class="nav-link" data-toggle="pill" href="#table-result" role = "tab" aria-controls="table-result" id="table-tab">Table</a>
-                    {% else %}
-                    <a class="nav-link disabled" role = "tab" aria-controls="table-result" id="table-tab">Table</a>
-                    {% endif %}
+                <li role="presentation" class="nav-item {%if foodrecords%}{%if page%}active{%else%}{%endif%}{%else%}disabled{%endif%}">
+                    <a class="nav-link{%if foodrecords%}{%else%}disabled{%endif%}" {% if foodrecords %} data-toggle="tab" href="#table-result" {% else %}{% endif %} role = "tab" aria-controls="table-result" id="table-tab">Table
+                        <span class="result-nav-span">
+                            <small>
+                                {% if foodrecords %}
+                                    {{n_results}} result{{foodrecords|pluralize}}
+                                {% else %}
+                                    0 results
+                                {% endif %}
+                            </small>
+                        </span>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -41,13 +38,13 @@
 
 {% block content %}        
     <div class="tab-content">
-        <div class="tab-pane active" id="map-result" role="tab-panel">
+        <div class="tab-pane {%if foodrecords%}{%if page%}{%else%}active{%endif%}{%else%}active{%endif%}" id="map-result" role="tab-panel">
             <div id="mapid"></div>
         </div>
-        <div class="tab-pane" id="table-result" role="tab-panel">
+        <div class="tab-pane {%if foodrecords%}{%if page%}active{%else%}{%endif%}{%endif%}" id="table-result" role="tab-panel">
             {% if foodrecords %}
                 <table class="table table-striped table-hover">
-                    <tr class = "row2">
+                    <tr>
                         <th>Predator</th>
                         <th>Prey</th>
                     </tr>
@@ -58,11 +55,19 @@
                     </tr>
                     {% endfor %}
                 </table>
+                <div>
+                    <div class="col-sm-10">
+                        {% block pagination %}{% pagination foodrecords taxon %}{% endblock %}
+                    </div>
+                </div>
             {% endif %}
         </div>
     </div>
 {% endblock %}
 
 {% block extrajs %}
-    <script src="/static/site/js/initializeMap.js"></script>
+    <script src="/static/site/js/map.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        mapCoordinates(map, {{coordinates}});
+    </script>
 {% endblock %}
