--- a/static/site/css/main.css
+++ b/static/site/css/main.css
@@ -1,10 +1,10 @@
 html, body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 body {
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 * {
@@ -20,7 +20,7 @@ body {
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {
-    height: 100vh;
+    height: 600px;
 }
 
 /* Set gray background color and 100% height */
@@ -56,10 +56,12 @@ footer {
 #content {
     padding-left: 0px;
     padding-right: 0px;
+    height: 600px;
+    overflow: auto;
 }
 
-#mapid { 
-    height: 100vh;
+#mapid {
+    height: 600px;
     width: 100%;
 }
 
@@ -74,6 +76,11 @@ footer {
     color: black;
 }
 
+#main-table {
+    height: 100%;
+    max-height: 100%;
+}
+
 #map-tab, #table-tab {
     background-color: #f1f1f1;
     color: #337ab7;
@@ -82,9 +89,9 @@ footer {
 
 #pagination-navs {
     padding-left: 10px;
-    
-    position: fixed;
+    padding-bottom: 20px;
+    /*position: fixed;
     bottom: 15px;
-    left: 310px;
+    left: 310px;*/
 }
 
