--- a/templates/site/index.html
+++ b/templates/site/index.html
@@ -43,20 +43,21 @@
         </div>
         <div class="tab-pane {%if foodrecords%}{%if page%}active{%else%}{%endif%}{%endif%}" id="table-result" role="tab-panel">
             {% if foodrecords %}
-                <table class="table table-striped table-hover">
+                <table class="table table-striped table-hover" id="main-table">
                     <tr>
                         <th>Predator</th>
                         <th>Prey</th>
                     </tr>
                     {% for foodrecord in foodrecords %}
-                    <tr>
-                        <td>{{foodrecord.predator.taxon.scientific_name}}</td>
-                        <td>{{foodrecord.prey.taxon.scientific_name}}</td>
-                    </tr>
+                        <tr class="accordion-toggle" data-toggle="collapse" data-target="#foodrecord_{{foodrecord.id}}_id">
+                            <td>{{foodrecord.predator.taxon.scientific_name}}</td>
+                            <td>{{foodrecord.prey.taxon.scientific_name}}</td>
+                        </tr>
+                        {% include "site/foodrecord.html" %}
                     {% endfor %}
                 </table>
                 <div>
-                    <div class="col-sm-10">
+                    <div class="col-sm-9">
                         {% block pagination %}{% pagination foodrecords taxon %}{% endblock %}
                     </div>
                 </div>
@@ -68,6 +69,8 @@
 {% block extrajs %}
     <script src="/static/site/js/map.js" type="text/javascript"></script>
     <script type="text/javascript">
-        mapCoordinates(map, {{coordinates}});
+        {% if coordinates %}
+            mapCoordinates(map, {{coordinates}});
+        {% endif %}
     </script>
 {% endblock %}
