--- a/templates/site/specimen.html
+++ b/templates/site/specimen.html
@@ -1,26 +1,26 @@
 <table class="table table-striped table-hover">
     <tr>
-        <td>Scientific name</td><td>{{specimen.taxon.scientific_name}}</td>
+        <td class="field-label">Scientific name</td><td>{{specimen.taxon.scientific_name}}</td>
     <tr>
     <tr>
-        <td>Verbatim name</td><td>{{specimen.verbatim_name}}</td>
+        <td class="field-label">Verbatim name</td><td>{{specimen.verbatim_name}}</td>
     <tr>
     <tr>
-        <td>Count</td><td>{{specimen.count|default:"-"}}</td>
+        <td class="field-label">Count</td><td>{{specimen.count|default:"-"}}</td>
     <tr>
     <tr>
-        <td>Mass</td><td>{{specimen.mass|default:"-"}} {{specimen.mass_unit|default:""}}</td>
+        <td class="field-label">Mass</td><td>{{specimen.mass|default:"-"}} {{specimen.mass_unit|default:""}}</td>
     <tr>
     <tr>
-        <td>Volume</td><td>{{specimen.volume|default:"-"}} {{specimen.volume_unit|default:""}}</td>
+        <td class="field-label">Volume</td><td>{{specimen.volume|default:"-"}} {{specimen.volume_unit|default:""}}</td>
     <tr>
     <tr>
-        <td>Component part</td><td>{{specimen.component_part|default:"-"}}</td>
+        <td class="field-label">Component part</td><td>{{specimen.component_part|default:"-"}}</td>
     <tr>
     <tr>
-        <td>Life stage</td><td>{{specimen.lifestage|default:"-"}}</td>
+        <td class="field-label">Life stage</td><td>{{specimen.lifestage|default:"-"}}</td>
     <tr>
     <tr>
-        <td>Sex</td><td>{{specimen.sex|default:"-"}}</td>
+        <td class="field-label">Sex</td><td>{{specimen.sex|default:"-"}}</td>
     <tr>
 </table>
