--- a/templates/site/foodrecord.html
+++ b/templates/site/foodrecord.html
@@ -1,3 +1,4 @@
+{% load bibliography %}
 <tr>
 <td class="hiddenRow" colspan="9">
     <div class="accordion-body collapse" id="foodrecord_{{foodrecord.id}}_id">
@@ -33,29 +34,40 @@
                 <table class="table table-striped table-hover">
                     {% with foodrecord.locality as locality %}
                     <tr>
-                        <td>Country</td><td>{{locality.adm0|default:"-"}}</td>
+                        <td class="field-label">Country</td><td>{{locality.adm0|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>State</td><td>{{locality.adm1|default:"-"}}</td>
+                        <td class="field-label">State</td><td>{{locality.adm1|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>County</td><td>{{locality.adm2|default:"-"}}</td>
+                        <td class="field-label">County</td><td>{{locality.adm2|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>Place</td><td>{{locality.named_place|default:"-"}}</td>
+                        <td class="field-label">Place</td><td>{{locality.named_place|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>Mud map</td><td>{{locality.dirt_map|default:"-"}}</td>
+                        <td class="field-label">Mud map</td><td>{{locality.dirt_map|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>Coordinates</td><td>{{locality.verbatim_coordinates|default:"-"}}</td>
-                    <tr>
-                    <tr>
-                        <td>Elevation</td>
+                        <td class="field-label">Coordinates</td>
                         <td>
-                            {{locality.elevation_start|default:"-"}} {{locality.elevation_unit|default:""}}
-                            {% if locality.elevation_end %} to {% endif %}
-                            {{locality.elevation_end|default:""}} {{locality.elevation_unit|default:""}}
+                            {{locality.point|default:"-"}}
+                        </td>
+                    <tr>
+                    <tr>
+                        <td class="field-label">Elevation</td>
+                        <td>
+                            {% if locality.elevation_start %}
+                                {{locality.elevation_start}}
+                                {% if locality.elevation_end %}
+                                    {% if locality.elevation_end != locality.elevation_start %}
+                                     - {{locality.elevation_end}}
+                                    {% endif %}
+                                {% endif %}
+                                 {{locality.elevation_unit|default:""}}
+                            {% else %}
+                            -
+                            {% endif %}                            
                         </td>
                     <tr>
                     {% endwith %}
@@ -64,33 +76,33 @@
             <div class="tab-pane" id="foodrecord_{{foodrecord.id}}_context">
                 <table class="table table-striped table-hover">
                     <tr>
-                        <td>Basis</td><td>{{foodrecord.basis|default:"-"}}</td>
+                        <td class="field-label">Basis</td><td>{{foodrecord.basis|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>Outcome</td><td>{{foodrecord.outcome|default:"-"}}</td>
+                        <td class="field-label">Outcome</td><td>{{foodrecord.outcome|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>Ingestion orientation</td><td>{{foodrecord.ingestion_direction|default:"-"}}</td>
+                        <td class="field-label">Ingestion orientation</td><td>{{foodrecord.ingestion_direction|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>Event date</td><td>{{foodrecord.event_date|default:"-"}}</td>
+                        <td class="field-label">Event date</td><td>{{foodrecord.event_date|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>Start time</td><td>{{foodrecord.start_time|default:"-"}}</td>
+                        <td class="field-label">Start time</td><td>{{foodrecord.start_time|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>End time</td><td>{{foodrecord.end_time|default:"-"}}</td>
+                        <td class="field-label">End time</td><td>{{foodrecord.end_time|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>Habitat</td><td>{{foodrecord.habitat|default:"-"}}</td>
+                        <td class="field-label">Habitat</td><td>{{foodrecord.habitat|default:"-"}}</td>
                     <tr>
                     <tr>
-                        <td>Verbatim habitat</td><td>{{foodrecord.verbatim_habitat|default:"-"}}</td>
+                        <td class="field-label">Verbatim habitat</td><td>{{foodrecord.verbatim_habitat|default:"-"}}</td>
                     <tr>
                 </table>
             </div>
             <div class="tab-pane" id="foodrecord_{{foodrecord.id}}_ref">
-                <p>{{foodrecord.ref}}</p>
+                {% block bibliography %}{% bibliography foodrecord.ref %}{% endblock %}
             </div>
         </div>
     </div>
