--- a/templates/site/index.html
+++ b/templates/site/index.html
@@ -31,6 +31,11 @@
                         </span>
                     </a>
                 </li>
+                {% if foodrecords %}
+                    <li role="presentation" class="nav-item">
+                        <a class="nav-link" id="download" href="/data/foodrecords/?taxon={{taxon}}" target="_blank" download="{{taxon}}_results.json"><small>Download</small></a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
@@ -70,7 +75,7 @@
     <script src="/static/site/js/map.js" type="text/javascript"></script>
     <script type="text/javascript">
         {% if coordinates %}
-            mapCoordinates(map, {{coordinates}});
+            mapCoordinates(map, {{coordinates|safe}});
         {% endif %}
     </script>
 {% endblock %}
