--- a/templates/site/foodrecord.html
+++ b/templates/site/foodrecord.html
@@ -31,29 +31,29 @@
                 {% endwith %}
             </div>
             <div class="tab-pane" id="foodrecord_{{foodrecord.id}}_locality">
-                <table class="table table-striped table-hover">
+                <table class="table table-striped">
                     {% with foodrecord.locality as locality %}
                     <tr>
                         <td class="field-label">Country</td><td>{{locality.adm0|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">State</td><td>{{locality.adm1|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">County</td><td>{{locality.adm2|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">Place</td><td>{{locality.named_place|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">Mud map</td><td>{{locality.dirt_map|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">Coordinates</td>
                         <td>
                             {{locality.point|default:"-"}}
                         </td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">Elevation</td>
                         <td>
@@ -69,36 +69,36 @@
                             -
                             {% endif %}                            
                         </td>
-                    <tr>
+                    </tr>
                     {% endwith %}
                 </table>
             </div>
             <div class="tab-pane" id="foodrecord_{{foodrecord.id}}_context">
-                <table class="table table-striped table-hover">
+                <table class="table table-striped">
                     <tr>
                         <td class="field-label">Basis</td><td>{{foodrecord.basis|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">Outcome</td><td>{{foodrecord.outcome|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">Ingestion orientation</td><td>{{foodrecord.ingestion_direction|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">Event date</td><td>{{foodrecord.event_date|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">Start time</td><td>{{foodrecord.start_time|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">End time</td><td>{{foodrecord.end_time|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">Habitat</td><td>{{foodrecord.habitat|default:"-"}}</td>
-                    <tr>
+                    </tr>
                     <tr>
                         <td class="field-label">Verbatim habitat</td><td>{{foodrecord.verbatim_habitat|default:"-"}}</td>
-                    <tr>
+                    </tr>
                 </table>
             </div>
             <div class="tab-pane" id="foodrecord_{{foodrecord.id}}_ref">
