fix field name typo

--- a/templates/site/foodrecord.html
+++ b/templates/site/foodrecord.html
@@ -46,7 +46,7 @@
                         <td class="field-label">Place</td><td>{{locality.named_place|default:"-"}}</td>
                     </tr>
                     <tr>
-                        <td class="field-label">Mud map</td><td>{{locality.dirt_map|default:"-"}}</td>
+                        <td class="field-label">Mud map</td><td>{{locality.dirtmap|default:"-"}}</td>
                     </tr>
                     <tr>
                         <td class="field-label">Coordinates</td>
