add options to search

--- a/templates/site/pagination.html
+++ b/templates/site/pagination.html
@@ -3,7 +3,7 @@
 <nav id="pagination-navs" aria-label="...">
  	<ul class="pagination">
  		{% for i in page_range %}
- 			{% paginator_number cl i query %}
+ 			{% paginator_number cl i query role %}
  		{% endfor %}
   	</ul>
 </nav>
