--- a/templates/site/index.html
+++ b/templates/site/index.html
@@ -6,6 +6,9 @@
         <div class="form-group">
             <label for="taxon-search-box">Search for records involving . . .</label>
             <input class="form-control" type="text" id="taxon-search-box" name="taxon" placeholder="Enter taxon name"></input>
+            <label class="radio-inline"><input type="radio" id="and-btn" name="taxonrole" value="pred" checked="">as predator</label>
+            <label class="radio-inline"><input type="radio" id="and-btn" name="taxonrole" value="prey">as prey</label>
+            <label class="radio-inline"><input type="radio" id="and-btn" name="taxonrole" value="predprey">as predator OR prey</label>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Search</button>
@@ -33,7 +36,7 @@
                 </li>
                 {% if foodrecords %}
                     <li role="presentation" class="nav-item">
-                        <a class="nav-link" id="download" href="/data/foodrecords/?taxon={{taxon}}" target="_blank" download="{{taxon}}_results.json"><small>Download</small></a>
+                        <a class="nav-link" id="download" href="/data/foodrecords/?taxon={{taxon}}&taxonrole={{taxonrole}}" target="_blank" download="{{taxon}}_results.json"><small>Download</small></a>
                     </li>
                 {% endif %}
             </ul>
@@ -63,7 +66,7 @@
                 </table>
                 <div>
                     <div class="col-sm-9">
-                        {% block pagination %}{% pagination foodrecords taxon %}{% endblock %}
+                        {% block pagination %}{% pagination foodrecords taxon taxonrole %}{% endblock %}
                     </div>
                 </div>
             {% endif %}
