html and templatetags for specimen measurements

--- a/templates/site/foodrecord.html
+++ b/templates/site/foodrecord.html
@@ -79,6 +79,9 @@
                         <td class="field-label">Basis</td><td>{{foodrecord.basis|default:"-"}}</td>
                     </tr>
                     <tr>
+                        <td class="field-label">Setting</td><td>{{foodrecord.conditions|default:"-"}}</td>
+                    </tr>
+                    <tr>
                         <td class="field-label">Outcome</td><td>{{foodrecord.outcome|default:"-"}}</td>
                     </tr>
                     <tr>
